--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,6 +12,11 @@
         <img src="https://placehold.co/300">
         <a th:href="@{'/detail/' + ${i.id}}" th:text="${i.title}"></a>
         <p th:text="${i.price + '원'}"></p>
+
+        <div class="card" th:each="i : ${items}">
+            <img src="https://placehold.co/300">
+            <a th:href="/edit.html">✏️</a>
+        </div>
     </div>
 </body>
 </html>
